2014-12-21
- Maximum Attack Speed increased from 500 to 600

2014-12-15
- Fixed Windranger Focus Fire not reducing damage.
- Fixed Magic Resistance not stacking according to the patch 6.82 change.

2014-12-05
- Added Riki Backstab.

2014-11-13
- Added Troll Warlord Battle Trance to buffs.

2014-11-12
- Updated values to match 6.82c.
- Fixed Homing Missile giving max attack speed.

2014-10-24
- Added Abaddon Curse of Avernus as debuff.
- Fixed Curse of Avernus attack speed slow not applying.
- Curse of Avernus can now be toggled on and off.
- Fixed Spectre Dispersion not affecting EHP.

2014-10-23
- Fixed Physical EHP calculation for negative armor values.
- Fixed Ogre Magi Unrefined Fireblast being skillable.
- Fixed Power Treads attack speed stacking when it should not.
- Fixed bug where unskilling buffs would add to available skill points.

2014-09-23
- Added item abbreviations to item search box input, e.g. entering "gg" or "gg branch" will show Iron Branch as a result.

2014-09-22
- Movement speed cannot go below minimum of 100.
- Added Scythe of Vyse active.
- Damage Amplification & Reduction section usable.

2014-09-21
- Added Medusa Mana Shield
- Added Spectre Desolate
- Faceless Void Backtrack now affects magical EHP.

2014-09-20
- Added Undying Flesh Golem
- Added Visage Familiar

2014-09-19
- Added Medallion of Courage to debuffs section.
- Added Undying Decay.
- Added Bristleback Bristleback.

2014-09-18
- Added Heart of Tarrasque passive health regen.
- Fixed enemies not being set to the correct tab.
- Fixed unit enemy tab not being set.
- Fixed Invoker Alacrity not working.

2014-09-14
- Small ui tweaks and ui code refactored.
- Fixed padding and margins when in side by side view (now called Fullscreen).
- Added panel highlight effect when hovering over tabs to show which tab panels are active.
- Each hero tab now has a corresponding unit tab that can be shown or hidden using a checkbox option.