@@ -37,12 +37,10 @@
                     <li class="dropdown-header">The International</li>
                     <li><a href="/dota2/international/2014">Tournament Results</a></li>
                                             <li><a href="/dota2/international/2014/prizepool/">Prize Pool Growth Charts</a></li>
-                                            <li class="dropdown-header">Community</li>
+                                            <li class="divider"></li><li class="dropdown-header">Community</li>
                     <li><a href="/dota2/community/streams">Live Streams</a></li>
-                                            <li class="divider"></li><li class="dropdown-header">Patches</li>
-                    <li><a href="/dota2/patches/6.81">Patch 6.81</a></li>
-                                            <li><a href="/dota2/patches/6.80">Patch 6.80</a></li>
-                                            <li><a href="/dota2/patches/6.79">Patch 6.79</a></li>
+                                            <li class="divider"></li><li><a href="/dota2/patches">Patches</a></li>
+                                            <li><a href="/dota2/a-z-challenge-list">A-Z Challenge List</a></li>
                                                               </ul>
                 </li>
                 <li class="dropdown li-webapps">
@@ -66,6 +64,7 @@
                                             <li><a href="/dota2/apps/hero-selection-trainer">Hero Selection Trainer</a></li>
                                             <li><a href="/dota2/apps/item-scramble">Item Scramble</a></li>
                                             <li><a href="/dota2/apps/replay/viewer">Replay Viewer</a></li>
+                                            <li><a href="/dota2/apps/tread-switch-trainer">Tread Switch Trainer</a></li>
                                                               </ul>
                 </li>
                 <li class="dropdown li-heroes">
