@@ -1,3 +1,9 @@
+2014-12-28
+- Added Sven God's Strength scepter aura to buffs.
+
+2014-12-26
+- Fixed Troll Warlord Berserker's Rage breaking health and EHP when activated.
+
 2014-12-21
 - Maximum Attack Speed increased from 500 to 600
 
